--- a/public/patterns/01-molecules-04-forms/index.html
+++ b/public/patterns/01-molecules-04-forms/index.html
@@ -9,9 +9,9 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1409142469" media="all" />
-		<!--[if lt IE 9]>
-			<link href="../../ie8.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="../../css/style.css?1409143074" media="all" />
+		<!--[if IE]>
+			<link href="../../ie.css" rel="stylesheet"/>
 		<![endif]-->
 
 		<!--[if lt IE 10]>
@@ -28,8 +28,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1409142469" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1409142469" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1409143074" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1409143074" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -266,10 +266,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1409142469">
+	<script id="pl-js-polyfill-insert-1409143074">
 		(function() {
 			if (self != top) {
-				var cb = '1409142469';
+				var cb = '1409143074';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -278,10 +278,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1409142469">
+	<script id="pl-js-insert-1409143074">
 		(function() {
 			if (self != top) {
-				var cb = '1409142469';
+				var cb = '1409143074';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
