--- a/public/patterns/03-templates-02-article/03-templates-02-article.html
+++ b/public/patterns/03-templates-02-article/03-templates-02-article.html
@@ -9,9 +9,9 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1409142469" media="all" />
-		<!--[if lt IE 9]>
-			<link href="../../ie8.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="../../css/style.css?1409143074" media="all" />
+		<!--[if IE]>
+			<link href="../../ie.css" rel="stylesheet"/>
 		<![endif]-->
 
 		<!--[if lt IE 10]>
@@ -28,8 +28,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1409142469" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1409142469" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1409143074" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1409143074" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -329,6 +329,27 @@
 		</form>						<ul class="comment-list">
 				<li class="comment-container">
 					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/tech/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Plinius Sloane</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/any/sepia" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Jacobus Sneiders</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/any" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Bertil Aaij</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
 		<img src="http://placeimg.com/100/100/people" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Junius Koolen</a></h4>
 					</div>
 					<div class="comment-text">
@@ -340,27 +361,6 @@
 					</div>
 					<div class="comment-text">
 						<p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/animals" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Duane Wilms</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Frans Keegan</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/any/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Freyr Hines</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p>
 					</div>
 				</li>						</ul>
 					</div>
@@ -651,10 +651,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1409142469">
+	<script id="pl-js-polyfill-insert-1409143074">
 		(function() {
 			if (self != top) {
-				var cb = '1409142469';
+				var cb = '1409143074';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -663,10 +663,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1409142469">
+	<script id="pl-js-insert-1409143074">
 		(function() {
 			if (self != top) {
-				var cb = '1409142469';
+				var cb = '1409143074';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
