--- a/patterns/04-pages-02-article/04-pages-02-article.html
+++ b/patterns/04-pages-02-article/04-pages-02-article.html
@@ -9,9 +9,9 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1409143506" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1409229292" media="all" />
 		<!--[if IE]>
-			<link href="../../ie.css" rel="stylesheet"/>
+			<link href="../../css/ie.css" rel="stylesheet"/>
 		<![endif]-->
 
 		<!--[if lt IE 10]>
@@ -28,8 +28,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1409143506" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1409143506" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1409229292" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1409229292" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -329,24 +329,17 @@
 		</form>						<ul class="comment-list">
 				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/sepia" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Aquila Achterkamp</a></h4>
+		<img src="http://placeimg.com/100/100/people/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Frans Keegan</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p>
+						<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/any" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Bertil Aaij</a></h4>
+		<img src="http://placeimg.com/100/100/arch" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Fergus Althuis</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/tech" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Teun Richard</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
+						<p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
@@ -357,10 +350,17 @@
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Frans Keegan</a></h4>
+		<img src="http://placeimg.com/100/100/tech/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Plinius Sloane</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
+						<p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/people" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Junius Koolen</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Ass semper velit sizzle fo.</p>
 					</div>
 				</li>						</ul>
 					</div>
@@ -651,10 +651,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1409143506">
+	<script id="pl-js-polyfill-insert-1409229292">
 		(function() {
 			if (self != top) {
-				var cb = '1409143506';
+				var cb = '1409229292';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -663,10 +663,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1409143506">
+	<script id="pl-js-insert-1409229292">
 		(function() {
 			if (self != top) {
-				var cb = '1409143506';
+				var cb = '1409229292';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
